--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2+.html">2 - Plus - dia ambitnych <span
                                 class="red">utrwalenie wiadomosci; opisywanie zanych miejsc w Polsce</span></a><input
-                            type="checkbox" class="checkbox"></li>
+                            type="checkbox" class="checkbox" checked></li>
                     <hr>
                 </ul>
                 <!-- 3 -->
