--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                             class="checkbox"></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson3B.html">3 - B - Lubię to!<span
-                                class="red">lubic + bezokolicznik</span> <br> Jakie jest twoje hobby? Co lubisz robić?</a><input type="checkbox" class="checkbox"></li>
+                                class="red"> - lubić + bezokolicznik</span> <br> Jakie jest twoje hobby? Co lubisz robić?</a><input type="checkbox" class="checkbox"></li>
                     <hr>
-                    <li class="liLesson"><a href=".//lekcji/lesson3C.html">3 - C - Mam talent <span class="red">  umie + bezokolicznik <br> koniugacja -m, s-z - powtórzenie</span> <br> Co umiesz robić?  Jak umiesz to robić?</a><input type="checkbox" class="checkbox"></li>
+                    <li class="liLesson"><a href=".//lekcji/lesson3C.html">3 - C - Mam talent <span class="red"> - umieć + bezokolicznik <br> koniugacja -m, s-z - powtórzenie</span> <br> Co umiesz robić?  Jak umiesz to robić?</a><input type="checkbox" class="checkbox"></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson3D.html">3 - D - Czas na casting <span class="red">
                         koniugacja e-, -isz/-ysz <br> mówic po...</span> <br>casting do wieczoru talentów</a><input type="checkbox" class="checkbox"></li>
