--- a/index.html
+++ b/index.html
@@ -231,6 +231,19 @@
                      <li class="liLesson"><a href="./lekcji/lesson9plus.html">10 - Plus - dla ambitnych <span class="red">  godziny - utrwalenie</span> <br> pisanie blogu o pocztówek</a><input type="checkbox" class="checkbox"></li>
                      <hr>
                  </ul>
+                 <h2>ORTOGRAFIA</h2>
+                 <ul class="list">
+                     <li class="liLesson"><a href="./lekcji/lessonRZ.html">Правописание Rz</a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson10B.html"></a><input type="checkbox"
+                    class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson10C.html"></a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson9D.html"></a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                 </ul>
             </div>
         </main>
     </div>
