--- a/lekcji/lesson3A.html
+++ b/lekcji/lesson3A.html
@@ -24,12 +24,35 @@
             <a href="https://quizlet.com/pl/934723846/krok-po-kroku-junior-1-3a-flash-cards/?i=4wzil5&x=1jqt"
                 target="_blank">NOWY SŁOWA >>></a>
             <div class="image">
+            <div class="textTitle">
+                <h4>Celem lekeji jest przygotowanie uczniow do zaprezentowania planu lekeji, a przy okazji też ulubionego przedmiotu (swojego i innych osob).
+                    Lekcja zaczyna się od wprowadzenia nazw przedmiótow. Przed ćw. 1 w ramach rozgrzewki można krótko powtórzyc kolory. </h4>
+                    <div class="hint2-container" onclick="toggleHint2(this)">
+                        <div class="hint2-header">tłumaczenie</div>
+                        <div class="hint2-content">
+                            <p>Цель урока – подготовить учащихся к изложению плана урока и одновременно любимого предмета (своего и чужого).
+                                Урок начинается со знакомства с названиями предметов. Перед упражнением 1 в качестве разминки можно кратко повторить цвета.</p>
+                        </div>
+                    </div>
+            </div>
                 <h2>Przypadki w języku polskim</h2>
                 <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfUFFqtH22egcpM3XA?embed=1&width=946&height=952"
                     alt="przypadki" style="width: 35%;">
             </div>
             <!-- 1 -->
+
             <div class="blockZadanie">
+                <div class="textTitle">
+                    <h4>Większość nazw przedmiotów ma charakter międzynarodowy analizowaliśmy, dlatego warto dać uczniom możliwość samodzielnego dopasowania stron do okładek swoich zeszytów. Następnie wspólnie możemy sprawdzić poprawność wykonania zadania oraz wymowę nowych słów. Uwaga! Skrót oznaczający wychowanie fizyczne można zapisać małymi literami (wf.) lub wielkimi literami (WF). W pierwszym przypadku z kropką, w drugim bez.</h4>
+                        <div class="hint2-container" onclick="toggleHint2(this)">
+                            <div class="hint2-header">tłumaczenie</div>
+                            <div class="hint2-content">
+                                <p>Большинство названий предметов являются международными мы проанализировали, поэтому стоит дать учащимся возможность самостоятельно сопоставить страницы с обложками своих тетрадей. Затем вместе мы сможем проверить правильность выполнения задания и произношение новых слов. Внимание! Аббревиатура физического воспитания может быть написана малыми буквами (wf.) или большими буквами (WF). В первом случае
+                                    с точкой, во втором без.</p>
+                            </div>
+                        </div>
+                    
+                </div>
                 <h2>1. Prosze podpisać zeszyty. [503A1]</h2>
                 <h3>503A1</h3>
                 <div>
@@ -299,7 +322,15 @@
             </div>
 
             <!-- 5 -->
-
+            <div class="textTitle">
+                <h4>Ważne jest, żeby każdy z uczniów zapytat swojego kolegę o ulubiony przed­miot i sam zaprezentowat swoj. </h4>
+                    <div class="hint2-container" onclick="toggleHint2(this)">
+                        <div class="hint2-header">tłumaczenie</div>
+                        <div class="hint2-content">
+                            <p>Для каждого ученика важно спросить своего друга о любимом предмете и представить свой.</p>
+                        </div>
+                    </div>
+            </div>
             <h2>5. Jaki jest twój ulubiony przedmiot? Prosze napisać i zapytać kolegę. [503A5]</h2>
             <div class="image" style="width: 50%;">
                 <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131020&authkey=%21AGpE5gSSQZg_9dA&width=1950&height=1930"
