--- a/lekcji/lesson3D.html
+++ b/lekcji/lesson3D.html
@@ -29,70 +29,79 @@
                     alt="przypadki" style="width: 35%;">
             </div>
             <!-- 1-2 -->
-            <div class="two">
-                <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131063&authkey=%21ADOXJjJScdPdfK0&width=1512&height=610"
-                    alt="503D2" style="width: 60%;margin-top: 45%;">
-                <div class="question-set" id="set1" style="width: 130%;margin-left: -30%;">
-                    <div class="dialog italic ">
-                        <h2>3. Proszę posłuchać i uzupełnić. </h2>
-                        <div class="colors">
-                            <div><audio src="./audio/065.mp3" controls>065</audio></div>
+             <div class="blockZadanie">
+                <div class="two">
+                    <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131063&authkey=%21ADOXJjJScdPdfK0&width=1512&height=610"
+                        alt="503D2" style="width: 60%;margin-top: 45%;">
+                    <div class="question-set" id="set1" style="width: 130%;margin-left: -30%;">
+                        <div class="dialog italic ">
+                            <h2>3. Proszę posłuchać i uzupełnić. </h2>
+                            <div class="colors">
+                                <div><audio src="./audio/065.mp3" controls>065</audio></div>
+                            </div>
+                            <div class="colors">
+                                <p class="p">robię | tanczę | liczę | uczę się | chodzę | mówisz | uczysz się </p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="italic blue">MAJA: </span> Olivia, musimy zaplanować dobry termin na casting
+                                    do wieczoru talentów. Kiedy masz czas? Może w poniedziałek?</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">OLIVIA: </span>W poniedziałek nie mogę, bo mam lekcję niemieckiego.
+                                </p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">MAJA: </span>O! <span class="blue"> Uczysz się</span> niemieckiego w
+                                    Polsce?</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">OLIVIA: </span> Tak, w Krakowie <input type="text"
+                                        data-answer="uczę się" class="line_1"> polskiego i niemieckiego. Chodzę na kurs do
+                                    szkoły językowej.</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">MAJA: </span>A co robisz we wtorek?</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">OLIVIA: </span> Nie <input type="text" data-answer="robię"
+                                        class="line_1"> nic specjalnego.</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">MAJA: </span>Ojej, ale we wtorek to ja nie mam czasu. <input
+                                        type="text" data-answer="chodzę" class="line_1"> na korepetycje z matematyki. Uczę
+                                    się do sprawdzianu. To może środa?</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">OLIVIA: </span> W środę i piątek <input type="text"
+                                        data-answer="tańczę" class="line_1">. Mam kurs salsy.</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">MAJA: </span>Hmm, <input type="text" data-answer="mówisz"
+                                        class="line_1">, że w poniedziałek jesteś zajęta, w środę i piątek też nie możesz...
+                                    To może czwartek? Masz plany na czwartek?</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">OLIVIA: </span> Nie mam. Jestem wolna.</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">MAJA: </span>Super! W takiej sytuacji casting jest w czwartek.</p>
+                            </div>
+                            <div class="colors">
+                                <p><span class="blue">OLIVIA: </span> Już <input type="text" data-answer="liczę"
+                                        class="line_1">dni!</p>
+                            </div>
                         </div>
-                        <div class="colors">
-                            <p class="p">robię | tanczę | liczę | uczę się | chodzę | mówisz | uczysz się </p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="italic blue">MAJA: </span> Olivia, musimy zaplanować dobry termin na casting
-                                do wieczoru talentów. Kiedy masz czas? Może w poniedziałek?</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">OLIVIA: </span>W poniedziałek nie mogę, bo mam lekcję niemieckiego.
-                            </p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">MAJA: </span>O! <span class="blue"> Uczysz się</span> niemieckiego w
-                                Polsce?</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">OLIVIA: </span> Tak, w Krakowie <input type="text"
-                                    data-answer="uczę się" class="line_1"> polskiego i niemieckiego. Chodzę na kurs do
-                                szkoły językowej.</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">MAJA: </span>A co robisz we wtorek?</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">OLIVIA: </span> Nie <input type="text" data-answer="robię"
-                                    class="line_1"> nic specjalnego.</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">MAJA: </span>Ojej, ale we wtorek to ja nie mam czasu. <input
-                                    type="text" data-answer="chodzę" class="line_1"> na korepetycje z matematyki. Uczę
-                                się do sprawdzianu. To może środa?</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">OLIVIA: </span> W środę i piątek <input type="text"
-                                    data-answer="tanczę" class="line_1">. Mam kurs salsy.</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">MAJA: </span>Hmm, <input type="text" data-answer="mówisz"
-                                    class="line_1">, że w poniedziałek jesteś zajęta, w środę i piątek też nie możesz...
-                                To może czwartek? Masz plany na czwartek?</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">OLIVIA: </span> Nie mam. Jestem wolna.</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">MAJA: </span>Super! W takiej sytuacji casting jest w czwartek.</p>
-                        </div>
-                        <div class="colors">
-                            <p><span class="blue">OLIVIA: </span> Już <input type="text" data-answer="liczę"
-                                    class="line_1">dni!</p>
+                        <button onclick="checkAnswers('set1')">Check</button>
+                        <div class="hint2-container" onclick="toggleHint2(this)">
+                            <div class="hint2-header"></div>
+                            <div class="hint2-content image">
+                               <img src="https://1drv.ms/i/s!Av5Voug-ar1TgoI6xIQn8nnm9zjFww?embed=1&width=1494&height=760" alt="otwet3">
+                            </div>
                         </div>
                     </div>
-                    <button onclick="checkAnswers('set1')">Check</button>
                 </div>
-            </div>
+             </div>
+            
             <!-- 6 -->
             <h2>6. Proszę uzupiełnić. [503D6]</h2>
             <h3>KONIUGACJA -e, -isz</h3>
