--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                                 plecaku?</span></a><input type="checkbox" class="checkbox" checked></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2powtorzenie.html">2 - Powtórzenie </a><input type="checkbox"
-                            class="checkbox" checked></li>
+                            class="checkbox" ></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2+.html">2 - Plus - dia ambitnych <span
                                 class="red">utrwalenie wiadomosci; opisywanie zanych miejsc w Polsce</span></a><input
-                            type="checkbox" class="checkbox" checked></li>
+                            type="checkbox" class="checkbox" ></li>
                     <hr>
                 </ul>
                 <!-- 3 -->
