--- a/lekcji/lesson2powtorzenie.html
+++ b/lekcji/lesson2powtorzenie.html
@@ -310,7 +310,7 @@
                             <span>6. <img
                                     src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127162&authkey=%21ANUBtkFwRnXPzP8&width=1142&height=1182"
                                     alt="komórka" style="width: 150px;height: 150px;"></span>
-                            <input type="text" data-answer="Ta komórka jest czara" class="line_3">
+                            <input type="text" data-answer="Ta komórka jest szara" class="line_3">
                         </div><br>
                         <div class="italic">
                             <span>7. <img
